[gd_scene load_steps=2 format=3 uid="uid://xqp6to0vit3c"]

[ext_resource type="Script" path="res://scenes/effects/on_fire/on_fire.gd" id="1_4kkbe"]

[node name="OnFire" type="Node2D"]
script = ExtResource("1_4kkbe")
damage_per_tick = 1.0

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="TickRate" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="stack_changed" from="." to="." method="_on_stack_change"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TickRate" to="." method="_on_tick_rate_timeout"]
